Revision history for String-Normal

0.03

0.02
    - added Title type
    - configs can be overriden via file args
    - normalizer takes --file arg
    - better documentation

0.01    
    - First version, released on an unsuspecting world.
