@@ -1,6 +1,7 @@
 Revision history for String-Normal
 
 0.03
+    - adjusted rules for Title
 
 0.02
     - added Title type
